lab1/Test/L1-A-1-97.cmm
int ;
struct {
  float U6XmfQOLvAX , ZHPZDwPV3cnvdi9Xk [ 1736257489 
    ] [ 1718848777 ] , ieYVP9B [ 2040448413 ] [ 357865728 
    ] [ 1830091779 ] ;
}iUhjbNmRvEW8 ( ) {
  struct l_rtJF_Jlqby2Il3 LJYciuygQ4sGeRU , pcR [ 
    1769455530 ] 1312216273 [ 2047724757 ] , vy8wIo1kBos 
    [ 1352555858 ] = gI , Ih9S8lsHlIF_v ;
}
int KnLIaraRY9fifsRd  , ABxinIa8_3T44p3TC72F [ 1289642413 
  ] 

;
float K3XfaG8Zpemd0E 
;
/ 